<resources>
    <string name="app_name">Patient</string>
    <string name="title_activity_home">Home</string>
    <!--<string name="title_activity_my_doctors">Home</string>-->


    //Hospital profile page
    <string name="TextView_HosName">Hospital name</string>
    <string name="textView_HosEmail">Email</string>
    <string name="textView_HosSpeciality"> Speciality</string>
    <string name="textView_HosWorkingH"> Working Hours</string>
    <string name="textView_HosPhone"> Phone #</string>
    <string name="textView_HosAddress"> Address</string>
    <string name="textView_HosExtraInfo"> Additional Information</string>

    //new Doctor profile page
    <string name="textView_DocName"> Doctor Name</string>
    <string name="textView_DocSpeciality"> Doctor Speciality</string>
    <string name="textView_DocEmail"> Email</string>
    <string name="textView_DocNationality"> Nationality</string>
    <string name="textView_DocCV"> CV</string>
    <string name="buttonSend_DoctorRequest"> Send Request</string>


    //Login page
    <string name="login_EmailText"> Enter your email</string>
    <string name="password_LoginText"> Enter your password</string>
    <string name="login_Button"> Login</string>
    <string name="signUp_TextView"> Sign up</string>
    <string name="forget_PasswordTV"> Forgot password?</string>


    //Register1 page
    <string name="RegGender_RadioButton"> Gender</string>
    <string name="MaleReg_RadioButton"> male</string>
    <string name="FemaleReg_RadioButton"> Female</string>
    <string name="Reg1_Btn"> Next</string>


    //Register2 page
    <string name="Reg2_FirstName"> First name</string>
    <string name="Reg2_LastName"> Last name</string>
    <string name="Reg2_CivilID"> Civil ID</string>
    <string name="Reg2_BirthDate"> Birth Date</string>
    <string name="Reg2_Phone"> Phone Number</string>
    <string name="Reg2_EmergencyPhone"> Emergency phone</string>


    //Register3 page
    <string name="Reg3_BloodType"> Blood type</string>
    <string name="Reg3_Diabetes"> Diabetes</string>
    <string name="Reg3_DiabetesNo"> No</string>
    <string name="Reg3_DiabetesTypeOne"> Type one</string>
    <string name="Reg3_DiabetesTypeTwo"> Type two</string>
    <string name="Reg3_Allergies"> Allergies</string>
    <string name="Reg3_AllergiesYes"> Yes</string>
    <string name="Reg3_AllergiesNo"> No</string>
    <string name="Reg3_Medications"> Medications</string>
    <string name="Reg3_RegisterButton"> Register</string>


    //Reset password page
    <string name="Forgetpassword_Submit"> Submit</string>
    <string name="Forgetpassword_EnterEmail"> Please Enter your email</string>


    //Patient General Profile page

    //Some of them are the Same As Reg2Page Strings ex:BirthDate

    <string name="PatientProfile_MyDoctors"> My Doctors</string>
    <string name="PatientProfile_MedicalInfo"> Medical Information</string>
    <string name="PatientProfile_EditProfile"> Edit Profile</string>


    //Patient Medical info Page
    <string name="PatientMedicalInfo_BloodType"> Blood Type</string>
    <string name="PatientMedicalInfo_Diabetes"> Diabetes</string>
    <string name="PatientMedicalInfo_Asthma"> Asthma</string>
    <string name="PatientMedicalInfo_Allergies"> Allergies</string>
    <string name="PatientMedicalInfo_Medications"> Medications</string>
    <string name="PatientMedicalInfo_GeneralInfo"> General Information</string>

//SendReport Page
    <string name="title_activity_my_doctors">MyDoctors</string>
    <string name="title_activity_send_report">SendReport</string>
    <string name="SendReport_Pain">Pain</string>
    <string name="SendReport_PainLocation">Pain Location</string>
    <string name="SendReport_BloodPressure">Blood Pressure</string>
    <string name="SendReport_Fever">Fever</string>
    <string name="SendReport_Headache">Headache</string>
    <string name="SendReport_Nauseous">Nauseous</string>
    <string name="SendReport_SugarLevel">Sugar Level</string>
    <string name="SendReport_HeartBeat">HeartBeat Rate</string>
    <string name="SendReport_Comments">Comments</string>
    <string name="SendReport_High">High</string>
    <string name="SendReport_Moderate">Moderate</string>
    <string name="SendReport_Dizziness">Dizziness</string>
    <string name="SendReport_Coughing">Coughing</string>
    <string name="SendReport_Low">Low</string>
    <string name="SendReport_Next">Next</string>
    <string name="SendReport_Submit">Submit</string>
    <string name="SendReport_Yes">Yes</string>
    <string name="SendReport_No">No</string>
    <string name="textView_HosType">Type</string>
    <string name="Home_home">Home</string>
    <string name="Home_MyDoctors">My Doctors</string>
    <string name="Home_FindDoctors">Find Doctors</string>
    <string name="Home_MyReports">My Reports</string>
    <string name="Home_Sittings">Settings</string>
    <string name="Home_Logout">Logout</string>
    <string name="Home_Hospitals">Hospitals</string>
    <string name="Sittings_language">Language</string>
    <string name="Settings_Language">language</string>
    <string name="Settings_LanguageArb">Arabic</string>
    <string name="Settings_LanguageEng">English</string>
    <string name="ResetPassword_CivilId">Civil ID</string>
    <string name="MyReport_HavePain">Have Pain</string>
    <string name="MyReportNoPain">No Pain</string>
    <string name="NewDoctor_Request">the Request is sent</string>

    <string name="Connecting">Connecting...</string>
    <string name="WrongUsername">Email or Password is wrong!</string>
    <string name="NoInternetConnection">you do not have Internet Connection!</string>
    <string name="MyDoctorHome">My Doctors</string>
    <string name="Profile">Profile</string>
    <string name="HospitalTypePrivate">Private</string>
    <string name="HospitalTypePublic">Public</string>
    <string name="DoctorProfile">Doctor Profile</string>
    <string name="SendReport_Send">Send Report</string>
    <string name="SearchHospital_Hospital">Hospitals</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Settings_ChooseLang">Choose Language</string>
    <string name="nauseous_No">No</string>
    <string name="nauseous_Yes">Yes</string>
    <string name="EditPic">Edit picture</string>
    <string name="Middlename">Middle Name</string>
    <string name="Country">Country</string>
    <string name="Password">Password</string>
    <string name="NewPassword">New Password</string>
    <string name="SaveChanges">Save Changes</string>
    <string name="Nationality">Nationality</string>
    <string name="CV">CV</string>
    <string name="SendRequest">Send Request</string>
</resources>
