<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pifss.patient.ViewPatientProfile">

    <android.support.v7.widget.Toolbar
        android:id="@+id/myToolbar"
        style="@style/AppTheme.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/Buttons">

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/ViewPatientProfile_PatientImage"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_alignTop="@+id/ViewPatientProfile_PatientNameTV"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/ViewPatientProfile_PatientNameTV"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="18dp"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/myToolbar"
        android:layout_toRightOf="@+id/Reg2_CivilIdTitle"
        android:layout_toEndOf="@+id/Reg2_CivilIdTitle" />

    <Button
        android:id="@+id/ViewPatientProfile_editPersonalInfoButton"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:background="@color/Buttons"
        android:fontFamily="monospace"
        android:text="@string/PatientProfile_EditProfile"
        android:textColor="@color/md_white_1000"
        android:textSize="14dp"
        android:layout_alignBottom="@+id/ViewPatientProfile_PatientImage"
        android:layout_toRightOf="@+id/Reg2_FirstNameTitle"
        android:layout_toEndOf="@+id/Reg2_FirstNameTitle" />


    <TextView
        android:id="@+id/Reg2_FirstNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RegGender_RadioButton"
        android:textSize="18dp"
        android:layout_alignTop="@+id/imageView36"
        android:layout_toRightOf="@+id/imageView36"
        android:layout_toEndOf="@+id/imageView36" />

    <TextView
        android:id="@+id/ViewPatientProfile_GenderVT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MaleReg_RadioButton"
        android:textSize="18sp"
        android:layout_below="@+id/Reg2_FirstNameTitle"
        android:layout_alignRight="@+id/ViewPatientProfile_EmailTitle"
        android:layout_alignEnd="@+id/ViewPatientProfile_EmailTitle" />

    <TextView
        android:id="@+id/Reg2_CivilIdTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Reg2_BirthDate"
        android:textSize="18dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/ViewPatientProfile_GenderVT"
        android:layout_toRightOf="@+id/imageView37"
        android:layout_toEndOf="@+id/imageView37" />

    <TextView
        android:id="@+id/ViewPatientProfile_BirthDateVT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="14/2/2012"
        android:textSize="18dp"
        android:layout_below="@+id/Reg2_CivilIdTitle"
        android:layout_toRightOf="@+id/imageView37" />

    <TextView
        android:id="@+id/ViewPatientProfile_EmailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="@string/textView_DocEmail"
        android:layout_below="@+id/ViewPatientProfile_BirthDateVT"
        android:layout_alignLeft="@+id/ViewPatientProfile_BirthDateVT"
        android:layout_alignStart="@+id/ViewPatientProfile_BirthDateVT"
        android:layout_marginTop="14dp" />

    <TextView
        android:id="@+id/ViewPatientProfile_emailVT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="test@gmail.com"
        android:textSize="20dp"
        android:layout_below="@+id/ViewPatientProfile_EmailTitle"
        android:layout_toRightOf="@+id/imageView38"
        android:layout_toEndOf="@+id/imageView38" />

    <TextView
        android:id="@+id/editPatientProfile_BirthDateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Reg2_Phone"
        android:textSize="18dp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/ViewPatientProfile_emailVT"
        android:layout_alignLeft="@+id/ViewPatientProfile_EmailTitle"
        android:layout_alignStart="@+id/ViewPatientProfile_EmailTitle" />

    <TextView
        android:id="@+id/ViewPatientProfile_phoneVT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="66666666"
        android:layout_below="@+id/editPatientProfile_BirthDateTitle"
        android:layout_alignLeft="@+id/ViewPatientProfile_EmergencyPhoneTitle"
        android:layout_alignStart="@+id/ViewPatientProfile_EmergencyPhoneTitle" />

    <TextView
        android:id="@+id/ViewPatientProfile_EmergencyPhoneTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"

        android:text="@string/Reg2_EmergencyPhone"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/ViewPatientProfile_phoneVT"
        android:layout_alignRight="@+id/ViewPatientProfile_emailVT"
        android:layout_alignEnd="@+id/ViewPatientProfile_emailVT" />

    <TextView
        android:id="@+id/ViewPatientProfile_emergencyNumberTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="77777777"
        android:textSize="18dp"
        android:layout_below="@+id/ViewPatientProfile_EmergencyPhoneTitle"
        android:layout_toRightOf="@+id/imageView41"
        android:layout_toEndOf="@+id/imageView41" />

    <Button
        android:id="@+id/ViewPatientProfile_medicalInfoViewButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:textSize="14dp"
        android:textColor="@color/md_white_1000"
        android:background="@color/Buttons"
        android:text="@string/PatientProfile_MedicalInfo"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageView36"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@mipmap/gender_icon"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/ViewPatientProfile_PatientImage"
        android:layout_toLeftOf="@+id/ViewPatientProfile_phoneVT"
        android:layout_toStartOf="@+id/ViewPatientProfile_phoneVT" />

    <ImageView
        android:id="@+id/imageView37"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@mipmap/calender"
        android:layout_alignTop="@+id/Reg2_CivilIdTitle"
        android:layout_alignLeft="@+id/imageView38"
        android:layout_alignStart="@+id/imageView38" />

    <ImageView
        android:id="@+id/imageView38"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@mipmap/email"
        android:layout_alignBottom="@+id/ViewPatientProfile_EmailTitle"
        android:layout_alignLeft="@+id/ViewPatientProfile_PatientImage"
        android:layout_alignStart="@+id/ViewPatientProfile_PatientImage" />

    <ImageView
        android:id="@+id/imageView39"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@mipmap/phone_icon"
        android:layout_alignBottom="@+id/editPatientProfile_BirthDateTitle"
        android:layout_toLeftOf="@+id/editPatientProfile_BirthDateTitle"
        android:layout_toStartOf="@+id/editPatientProfile_BirthDateTitle" />

    <ImageView
        android:id="@+id/imageView41"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@mipmap/emergencynum"
        android:layout_alignBottom="@+id/ViewPatientProfile_EmergencyPhoneTitle"
        android:layout_toLeftOf="@+id/ViewPatientProfile_EmergencyPhoneTitle"
        android:layout_toStartOf="@+id/ViewPatientProfile_EmergencyPhoneTitle" />

    <TextView
        android:id="@+id/textViewEditImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView36"
        android:layout_alignStart="@+id/imageView36"
        android:layout_below="@+id/ViewPatientProfile_PatientImage"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text=" Edit " />


</RelativeLayout>
