<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pifss.patient.Login">

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="200dp"
        android:layout_height="150dp"

        android:layout_above="@+id/login_EmailTF"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        app:srcCompat="@mipmap/heartlogo" />

    <EditText
        android:id="@+id/login_EmailTF"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="example@example.com"
        android:inputType="textEmailAddress"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_above="@+id/Login_PasswordTV"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <EditText
        android:id="@+id/Login_PasswordTV"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="password"
        android:inputType="textPassword"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/login_EmailTF"
        android:layout_alignStart="@+id/login_EmailTF" />


    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Login_forgetpasswordTV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:background="@color/Buttons"
        android:fontFamily="monospace"
        android:alpha="0.5"
        android:text="@string/login_Button"
        android:textColor="@color/md_white_1000"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Login_signupTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:background="@color/Buttons"
        android:fontFamily="monospace"
        android:text="@string/signUp_TextView"
        android:textColor="@color/material_drawer_background"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Login_forgetpasswordTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/Login_PasswordTV"
        android:layout_alignRight="@+id/Login_PasswordTV"
        android:layout_below="@+id/Login_PasswordTV"
        android:layout_marginTop="16dp"
        android:text="@string/forget_PasswordTV"
        android:textColor="@color/Buttons"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:fontFamily="monospace"
        app:srcCompat="@mipmap/email_2"
        android:layout_alignBottom="@+id/login_EmailTF"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp" />

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/imageView24"
        android:layout_alignStart="@+id/imageView24"
        android:layout_alignTop="@+id/Login_PasswordTV"
        app:srcCompat="@mipmap/password" />
</RelativeLayout>
