<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pifss.patient.EditMedicalInfo">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar4"
        style="@style/AppTheme.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/Buttons">

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_alignBottom="@+id/saveChangesMedicalButton"
        android:layout_alignRight="@+id/textView22"
        android:layout_alignEnd="@+id/textView22" />

    <TextView
        android:id="@+id/PNameTF"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_below="@+id/toolbar4"
        android:layout_alignLeft="@+id/saveChangesMedicalButton"
        android:layout_alignStart="@+id/saveChangesMedicalButton"
        android:layout_marginTop="14dp" />

    <Button
        android:id="@+id/saveChangesMedicalButton"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:background="@color/Buttons"
        android:text="Save Changes"
        android:fontFamily="monospace"
        android:textSize="14dp"
        android:textColor="@color/md_white_1000"
        android:layout_below="@+id/PNameTF"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PatientMedicalInfo_BloodType"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/imageView5"
        android:layout_toRightOf="@+id/imageView14"
        android:layout_toEndOf="@+id/imageView14" />

    <EditText
        android:id="@+id/bloodtypeEditText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="A+"
        android:layout_below="@+id/textView21"
        android:layout_toRightOf="@+id/imageView14"
        android:layout_toEndOf="@+id/imageView14" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PatientMedicalInfo_Diabetes"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/bloodtypeEditText"
        android:layout_alignLeft="@+id/diabetesEditText"
        android:layout_alignStart="@+id/diabetesEditText" />

    <EditText
        android:id="@+id/diabetesEditText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/bloodtypeEditText"
        android:layout_alignStart="@+id/bloodtypeEditText"
        android:layout_below="@+id/textView22"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="No" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/PatientMedicalInfo_Asthma"
        android:layout_below="@+id/diabetesEditText"
        android:layout_alignLeft="@+id/textView22"
        android:layout_alignStart="@+id/textView22" />

    <EditText
        android:id="@+id/asthmaEditText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/diabetesEditText"
        android:layout_alignStart="@+id/diabetesEditText"
        android:layout_below="@+id/textView23"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="No" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/PatientMedicalInfo_Allergies"
        android:layout_below="@+id/asthmaEditText"
        android:layout_alignRight="@+id/textView22"
        android:layout_alignEnd="@+id/textView22" />

    <EditText
        android:id="@+id/allergiesEditText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="No"
        android:layout_below="@+id/textView24"
        android:layout_alignLeft="@+id/textView24"
        android:layout_alignStart="@+id/textView24" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/PatientMedicalInfo_Medications"
        android:layout_below="@+id/allergiesEditText"
        android:layout_toLeftOf="@+id/saveChangesMedicalButton"
        android:layout_toStartOf="@+id/saveChangesMedicalButton" />

    <EditText
        android:id="@+id/medicationsEditText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="No Medication"
        android:layout_below="@+id/textView25"
        android:layout_alignLeft="@+id/allergiesEditText"
        android:layout_alignStart="@+id/allergiesEditText" />

    <ImageView
        android:id="@+id/SendReport_DoctorImage"
        android:layout_width="30dp"
        android:layout_height="25dp"
        app:srcCompat="@mipmap/medicine_icon"
        android:layout_alignTop="@+id/textView25"
        android:layout_toLeftOf="@+id/textView25"
        android:layout_toStartOf="@+id/textView25" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="30dp"
        android:layout_height="25dp"
        app:srcCompat="@mipmap/blood_drop_icon"
        android:layout_above="@+id/bloodtypeEditText"
        android:layout_alignLeft="@+id/SendReport_DoctorImage"
        android:layout_alignStart="@+id/SendReport_DoctorImage" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="30dp"
        android:layout_height="25dp"
        app:srcCompat="@mipmap/diabity_icon"
        android:layout_above="@+id/diabetesEditText"
        android:layout_toLeftOf="@+id/textView22"
        android:layout_toStartOf="@+id/textView22" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="30dp"
        android:layout_height="25dp"
        android:layout_below="@+id/diabetesEditText"
        android:layout_toLeftOf="@+id/textView24"
        android:layout_toStartOf="@+id/textView24"
        app:srcCompat="@mipmap/asthma_icon" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="30dp"
        android:layout_height="25dp"
        android:layout_below="@+id/asthmaEditText"
        android:layout_toLeftOf="@+id/textView24"
        android:layout_toStartOf="@+id/textView24"
        app:srcCompat="@mipmap/allergy_icon" />
</RelativeLayout>
